# d-chat

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  D-Chat ТЗ.docx  README.md  build_and_run.bat  build_and_test.bat  d-chat_config.example.json  d-chat_config.json  vcpkg.json
src/: daemon.cpp  test.bat
src/app/: CMakeLists.txt  ChatApplication.cpp  ChatApplication.hpp  main.cpp
src/domain/: CMakeLists.txt
src/domain/blockchain/: Block.cpp  Block.hpp  BlockchainService.cpp  BlockchainService.hpp  IChainRepo.hpp
src/domain/chat/: ChatService.cpp  ChatService.hpp  IChatClient.hpp  IChatServer.hpp
src/domain/config/: GlobalState.cpp  GlobalState.hpp  IConfig.cpp  IConfig.hpp
src/domain/message/: IMessageRepo.hpp  Message.cpp  Message.hpp  MessageService.cpp  MessageService.hpp
src/domain/peer/: IPeerRepo.hpp  PeerService.cpp  PeerService.hpp  UserPeer.cpp  UserPeer.hpp
src/infra/: CMakeLists.txt
src/infra/blockchain/: ChainDB.cpp  ChainDB.hpp
src/infra/chat/: TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp
src/infra/config/: GlobalState.cpp  GlobalState.hpp  JsonConfig.cpp  JsonConfig.hpp
src/infra/message/: BlockRangeMessage.cpp  BlockRangeMessage.hpp  BlockchainErrorMessage.cpp  BlockchainErrorMessage.hpp  ConnectMessage.cpp  ConnectMessage.hpp  ConnectionMessage.cpp  ConnectionMessage.hpp  DisconnectMessage.cpp  DisconnectMessage.hpp  DisconnectionMessage.cpp  DisconnectionMessage.hpp  ErrorMessage.cpp  ErrorMessage.hpp  MessageDB.cpp  MessageDB.hpp  PeerListMessage.cpp  PeerListMessage.hpp  SendMessage.cpp  SendMessage.hpp  TextMessage.cpp  TextMessage.hpp
src/infra/network/: SocketClient.cpp  SocketClient.hpp  SocketServer.cpp  SocketServer.hpp  TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp
src/infra/peer/: PeerDB.cpp  PeerDB.hpp
src/service/: CMakeLists.txt
src/service/blockchain/: Block.cpp  Block.hpp  Blockchain.cpp  Blockchain.hpp
src/service/crypto/: ICrypto.hpp  OpenSSLCrypto.cpp  OpenSSLCrypto.hpp  XORCrypto.cpp  XORCrypto.hpp
src/service/db/: DBFile.cpp  DBFile.hpp
src/service/json/: JsonFile.hpp
src/service/network/: SocketClient.cpp  SocketClient.hpp  SocketServer.cpp  SocketServer.hpp
src/ui/: CMakeLists.txt
src/ui/cli/: ConsoleUI.cpp  ConsoleUI.hpp
src/utils/: CMakeLists.txt  hex.hpp  sha256.hpp  timestamp.hpp  uuid.hpp
tests/: CMakeLists.txt
tests/e2e/: blockchain_fork_stress_test.cpp  blockchain_sync_test.cpp  full_chat_scenario_test.cpp
tests/helpers/: XORCrypto.cpp  XORCrypto.hpp  test_helpers.cpp  test_helpers.hpp
tests/integration/: blockchain_service_test.cpp  chat_service_test.cpp  message_service_test.cpp  network_test.cpp  peer_service_test.cpp  xor_crypto_test.cpp
tests/unit/: block_test.cpp  config_test.cpp  crypto_test.cpp  database_test.cpp  message_test.cpp  utils_test.cpp  xor_crypto_test.cpp
